# swing-screener

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: supplemental_tickers.py
prompts/: 01_project_scaffold.md  02_screener_agent.md  03_technical_agent.md  04_sentiment_agent.md  05_scoring_agent.md  06_orchestrator.md  07_cli_and_scheduling.md
scripts/: run_daily.sh
src/: __main__.py  cli.py  config.py  orchestrator.py  types.py
src/agents/: scoring.py  screener.py  sentiment.py  technical.py
src/output/: __init__.py  console.py  csv_export.py  history.py  json_report.py  markdown_report.py
src/prompts/: sentiment_system.py
src/utils/: indicators.py  logging.py  technical_helpers.py  trade_math.py
tests/: test_orchestrator.py  test_output.py  test_scoring.py  test_screener.py  test_sentiment.py  test_technical.py
