[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "swing_screener"
version = "0.1.0"
description = "A swing trade screening agent using sub-agent architecture"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.1.0",
    "pandas-ta>=0.3.14b1",
    "numpy>=1.24.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
